Upgrade to Java 21 and Jakarta EE 10.0 (21.0.0-M1-SNAPSHOT / 17.104.x release line)