@@ -5,10 +5,29 @@ This project adheres to [Semantic Versioning](http://semver.org/).
 
 ## [Unreleased]
 
-# [17.104.0] - 2025-12-16
+## [21.0.0-SNAPSHOT] - 2026-03-26
 ### Changed
-- Correctly organise AlfrescoRestClient to utilise client lifecycle.
+- Updated project version to `21.0.0-SNAPSHOT`
+- Updated `maven-framework-parent-pom` to `21.0.0-SNAPSHOT` (Java 21, Jakarta EE 10)
+- Updated `maven-common-bom` to `21.0.0-SNAPSHOT` (CDI 4.0.1, Jakarta EE API 10.0.0)
+- Updated CDI `beans.xml` descriptors from version `1.1` to `4.0` (`beans_4_0.xsd`) across all modules
+- Replaced `org.glassfish:javax.json` dependency with `org.glassfish:jakarta.json` in all modules
+- Resolved git merge conflicts in `JsonObjects`, `MetadataJdbcRepository`, `FileServiceTestClient`, `AlfrescoFileSender`, and `AlfrescoFileRemover` — all migrated to `jakarta.*` imports
+- Fixed `javax.ws.rs` imports in `AlfrescoRestClientTest` to use `jakarta.ws.rs`
+- Updated `openejb.version` in `maven-common-bom` from `8.0.14` to `10.0.0` (TomEE 10 / Jakarta EE 10 / CDI 4.0 support via OpenWebBeans 4.0.3)
+- Updated JaCoCo to `0.8.12` in `maven-parent-pom` for Java 21 class file support
+- Added `argLine` to maven-failsafe-plugin in integration-tests profile with `-Dnet.bytebuddy.experimental=true --add-opens java.base/java.lang=ALL-UNNAMED` for Mockito compatibility on Java 21
+
+## [17.104.0-M3] - 2025-10-27
+### Changed
+- Correctly organise AlfrescoRestClient to utilise client lifecycle. 
+
+## [17.104.0-M2] - 2025-10-10
+### Changed
 - Used JsonFactory instead of Json.create methods as per https://github.com/jakartaee/jsonp-api/issues/154
+
+## [17.104.0-M1] - 2025-07-29
+### Changed
 - Updated version to 17.104.x for the new framework E
 ### Security
 - Updated to latest common-bom for latest third party security fixes:
